apps/forgejo/overlays/nishir/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo
spec:
  template:
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                  - key: node.kubernetes.io/instance-type
                    operator: In
                    values:
                      - rpi5-large
                      - rpi4-large
              weight: 80
      containers:
        - name: forgejo
          volumeMounts:
            - name: certs
              mountPath: /etc/ssl/certs
              readOnly: true
      volumes:
        - name: certs
          configMap:
            name: nishir-ca-certificates.crt
